tooling/nargo_cli/tests/snapshots/execute__tests__regression_7143_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6369484378566127421",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "array",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/9VRQQ6EMAhsqw+CAhZu+5Vttv7/CauxMUSP6sFJCMNlmMnEsGFYZuw89ju68Xc48OS4x6dvuIjgft6oi2/wODzgcS/tTqPpodAEE3MruSHhF7JVFWCpk6KiqPyyEjVlLVatgCFTw1mM5i62FjIeMvuiPE/hjD/RIIK8IQMAAA==",
  "debug_symbols": "lY3LCsMgEEX/ZdYu2tKm4K+UEnyMYUBURi0Uyb/HhASyzfLcM3NvA4u6TiMFFzPITwMfjSoUQ6cG9y3KSYWVclFcQA6DAAwW5Ps5C3DkEeTrNn8FPK6cd9BM3tM0njd7/FNMSnvc0dVgTrb802GO/8TRoK2Ma9Pmev0C",
  "file_map": {
    "50": {
      "source": "fn main(x: u32, array: call_data(0) [bool; 1]) -> pub bool {\n    !array[x]\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression_7143/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
