tooling/nargo_cli/tests/snapshots/execute__tests__regression_7195_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3869654505094197118",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71VwQ6CMAztBNRp9KCJFy960SsICkcP+iGLhO/g0w2h1VKHMWGzCVlJy+t77RoUtKbwaSzEcwSfRjlXPONhljjEin3yVJ54vohyX0F/4494augOqYkHDgVrCydX+EWcXbRFn0P+qWaYHvBPhB/6wY8niHOru/gg6i6gu7z8G4rxRb5jbIpx8pfoa4HnY+6ck+u+rS38qdYcte6F1oD1xxUPOaeop6+cR8RiLrlQ3THi8TvL/UhwpfyN4DkBP7NbCf28Vl8/5T0in7//qpfyt0Lv+I96qZbUZLs/I6FXWfQGX/RS/k7o9bWbNr18N+mfENbu6+dFuweNBfW7D3z3QdSPRP4B32cWHeEAnlVukio1lTmbssweRvYJRJ+eAPeVIbUJAAA=",
  "debug_symbols": "zZXLCoMwEEX/ZdZZ5FFj9FdKKVFjCYQoUQtF/PfGoiBWCm7KbEIm3DOcVe4IlSmGx936uukgv47gmlL3tvFxGicCRbDO2cd9+wx0PljyyXet9vPY9Tr0kHOZEjC+irdURL62zkCe0Il8RRmTS5Rx/jsq6JIUchu8EWAShUWKwkKhsMgwWHCKwoKhsOCHFmm2WqjkHxYChcUFhUWCwkKisDj+OzO1AvSyJ9RpIjtLCHqaYOeIKU5PHawunFnKth58uene/tWaXQ23oSlNNQQzF/Kmi2dbIYhQcW1c/QY=",
  "file_map": {
    "50": {
      "source": "fn bar(y: Field) {\n    assert(y != 0);\n}\n\nfn foo(x: Field) {\n    // Safety: test\n    let y = unsafe { baz(x) };\n    bar(y);\n}\n\nunconstrained fn baz(x: Field) -> Field {\n    x\n}\n\nfn main(x: Field, y: pub Field) {\n    // Safety: test\n    let x = unsafe { baz(x) };\n    foo(x);\n    foo(y);\n    assert(x != y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
